# opengothic-ios-metal

./: .gitmodules  CMakeLists.txt  Info.plist.in  README.md
.github/workflows/: gpudebug-trace-audit.yml  ios-metalfx-spatial.yml  ios-metalfx-temporal.yml  ios.yml  renderer-ios.yml
game/: camera.cpp  camera.h  commandline.cpp  commandline.h  gothic.cpp  gothic.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.h
game/game/: gamescript.cpp  gamesession.cpp  inventory.cpp  movealgo.cpp  playercontrol.cpp  playercontrol.h
game/game/compatibility/: cpu32.cpp
game/graphics/: drawbuckets.h  drawcommands.cpp  instancestorage.h  inventoryrenderer.cpp  inventoryrenderer.h  iosbinkselftest.h  iosbinkshaderabi.h  iosbuiltinshaderabi.h  iosframeinput.cpp  iosframeinput.h  iosframeplan.cpp  iosframeplan.h  iosfunctionalevidence.h  iosgpubink.h  iosgpubink.mm  iosgpuscene.h  iosgpuscene.mm  iosgpusceneplan.h  iosinventoryshaderabi.h  ioslandscapeshader.h  ioslandscapeshaderabi.h  iosmetalcapturesession.h  iosmetalcapturesession.mm  iosmetalcontext.cpp  iosmetalcontext.h  iosmetalresourceallocator.cpp  iosmetalresourceallocator.h  iosmetalresourceallocator.mm  iosmetalresourceallocatornative.h  iosmetalresourceclearpassprobe.cpp  iosmetalresourceclearpassprobe.h  iosmetalresourceclearpassprobe.mm  iospipelinearchivepolicy.h  iosrenderworld.cpp  iosrenderworld.h  iossavepreviewpolicy.h  iossceneassetregistry.cpp  iossceneassetregistry.h  iossceneconversion.cpp  iossceneconversion.h  (+31 more)
game/graphics/mesh/: pose.cpp  pose.h
game/graphics/mesh/submesh/: staticmesh.cpp  staticmesh.h
game/ui/: gamemenu.cpp  gamemenu.h  gamepadaxisstate.h  gamepadinput.cpp  gamepadinput.h  inventorymenu.cpp  inventorymenu.h  paddiagram.cpp  paddiagram.h  padsystemgesture.h  quickring.cpp  quickring.h  touchinput.cpp  touchinput.h  videowidget.cpp  videowidget.h
game/utils/: crashlog.cpp  exceptiondump.cpp  exceptiondump.h  exceptiondump.mm  gamepad.cpp  gamepad.h  gamepad.mm  installdetect.mm  keycodec.h  memoryinfo.mm  poolprobe.cpp  poolprobe.h  poolprobe.mm  safearea.cpp  safearea.h  safearea.mm  systemmsg.cpp  systemmsg.h  systemmsg.mm
game/world/: world.cpp  world.h  worldobjects.cpp  worldobjects.h
game/world/objects/: npc.cpp  npc.h
ios/: CONTROLLER-TECHNICAL.md  DEVELOPMENT.md  README-ios.md  TODO.md  build-ios.sh
ios/device-test/: run-pipeline-archive-test.sh  run-semantic-pipeline-archive-test.sh  run-semantic-ui-lifecycle-test.sh  run-smoke-test.sh  run-ui-automation-test.sh  semantic-console-supervisor.py  test-semantic-console-harness.sh  validate-clear-only-pass-self-test-log.py  validate-fault-log.py  validate-frame-fence-fault-log.py  validate-gpudebug-trace.py  validate-metal-capture-artifact.py  validate-pipeline-archive-log.py  validate-preview-fence-fault-log.py  validate-resource-allocator-self-test-log.py  validate-semantic-pipeline-archive-evidence.py  validate-semantic-ui-lifecycle-log.py  validate-shading-prototype-tile-self-test-log.py  validate-ui-automation-log.py
ios/device-test/provisioning-stub/Probe/: Info.plist  main.swift
ios/device-test/provisioning-stub/Probe.xcodeproj/: project.pbxproj
ios/device-test/ui-automation/RendererIOSUITests/: Info.plist  RendererIOSUITests.swift
ios/device-test/ui-automation/RendererIOSUITests.xcodeproj/: project.pbxproj
ios/device-test/ui-automation/RendererIOSUITests.xcodeproj/xcshareddata/xcschemes/: RendererIOSUITests.xcscheme
ios/patches/: apply-patches.sh  tempest-metal-direct-drawable-v2.patch  tempest-metalfx-spatial.patch
ios/tests/: iosbinkselftest.cpp  iosbinkshader.cpp  iosbuiltinshader.cpp  iosframeplan.cpp  iosgpusceneplan.cpp  iosinventoryshader.cpp  ioslandscapeshader.cpp  iosmetalresourceallocator.cpp  iosmetalresourceclearpassprobe.cpp  iospipelinearchivepolicy.cpp  iossavepreviewpolicy.cpp  iossceneassetregistry.cpp  iosscenecontract.cpp  iossceneconversion.cpp  iossceneextractorplan.cpp  iosscenesourcecontract.cpp  iosshadercompilationpolicy.cpp  iosshadingprototypepipeline.cpp  iosshadingprototypeplan.cpp  iosshadingprototypeshader.cpp  iosshadingprototypetileprobe.cpp
shader/ios-metal/: bink.metal  inventory.metal  landscape.metal  shading-prototypes.metal  ui.metal
